--- a/src/components/nav/nav.module.css
+++ b/src/components/nav/nav.module.css
@@ -5,19 +5,23 @@
 }
 
 section {
-    border: rgb(15, 54, 70) solid;
     border-radius: 0 20px 20px 0;
     width: 1fr;
     height: 50px;
-    text-align: center;
 }
+
 
 a {
-    display: block;
+    display: flex;
+    align-items: center;
+    padding-left: 10px;
+    font-size: 16px;
     block-size: 100%;
     text-decoration: none;
+    border-radius: 0 20px 20px 0;
+    color:black;
 }
 
-.active {
-   color: snow;
+a.active {
+   background-color: rgba(6, 49, 189, 0.404);
 }
