--- a/src/components/content/content.module.css
+++ b/src/components/content/content.module.css
@@ -13,3 +13,20 @@
   font-family: Arial, Helvetica, sans-serif;
   font-size: 25px;
 }
+
+.button {
+  display: block;
+  float: left;
+  width: 100px;
+  height: 30px;
+  margin-right: 10px;
+
+}
+
+.textarea {
+  float:inherit;
+}
+
+.content {
+  display: block;
+}
