--- a/src/components/contract/contract.module.css
+++ b/src/components/contract/contract.module.css
@@ -1,21 +1,17 @@
-
-
-.header {
-  display: table-cell;
-  width: 100vw;
+td {
+  /* width: 100px;
+  height: 50px; */
+  font-size: 18px;
+  color: lightblue;
+  background-color: lightgray;
+  padding-left: 10px;
   text-align: center;
-  vertical-align: middle;
-  height: 80px;
-  background-color: rgb(140, 192, 240);
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 25px;
 }
 
-.div {
-  width: 100px;
-  height: 50px;
+div {
+  background-color: lightgray;
 }
 
-.content {
-  display: block;
+#first {
+  width: 300px;
 }
