--- a/src/components/contract/contract.module.css
+++ b/src/components/contract/contract.module.css
@@ -2,7 +2,7 @@ td {
   /* width: 100px;
   height: 50px; */
   font-size: 18px;
-  color: lightblue;
+  color: rgb(0, 0, 0);
   background-color: lightgray;
   padding-left: 10px;
   text-align: center;
